[gd_scene load_steps=9 format=2]

[ext_resource path="res://Assets/Fonts/Prolamina/CT ProLamina.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Assets/UIElements/Image/Levels/Basic/Icon World Basic Level Normal.png" type="Texture" id=2]
[ext_resource path="res://Assets/UIElements/Image/Levels/Basic/Icon World Disabled Basic Level.png" type="Texture" id=3]
[ext_resource path="res://Scenes/MainScenes/Menu/LevelIndicator.gd" type="Script" id=4]
[ext_resource path="res://Assets/UIElements/Image/Levels/Icon Star Basic Level.png" type="Texture" id=5]
[ext_resource path="res://Assets/UIElements/Image/Levels/Basic/Icon World Basic Level Pressed.png" type="Texture" id=6]
[ext_resource path="res://Assets/UIElements/Image/Levels/Basic/Icon World Basic Level Hover.png" type="Texture" id=7]

[sub_resource type="DynamicFont" id=1]
size = 70
font_data = ExtResource( 1 )

[node name="LevelIndicator" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -896.0
margin_bottom = -472.0
rect_min_size = Vector2( 128, 128 )
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LevelButton" type="TextureButton" parent="."]
margin_right = 40.0
margin_bottom = 40.0
mouse_default_cursor_shape = 2
disabled = true
texture_normal = ExtResource( 2 )
texture_pressed = ExtResource( 6 )
texture_hover = ExtResource( 7 )
texture_disabled = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="LevelButton"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -13.0
margin_top = -23.5
margin_right = 13.0
margin_bottom = 23.5
custom_fonts/font = SubResource( 1 )
text = "0"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Star1" type="NinePatchRect" parent="LevelButton"]
visible = false
margin_left = 9.43877
margin_top = 28.4753
margin_right = 49.4388
margin_bottom = 68.4753
texture = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Star2" type="NinePatchRect" parent="LevelButton"]
visible = false
margin_left = 43.4188
margin_top = 1.41528
margin_right = 83.4188
margin_bottom = 41.4153
texture = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Star3" type="NinePatchRect" parent="LevelButton"]
visible = false
margin_left = 75.8239
margin_top = 27.3713
margin_right = 115.824
margin_bottom = 67.3713
texture = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="LevelButton" to="." method="_on_LevelButton_pressed"]
